log
Thu 21 Mar 2024 03:30:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:48:8: error: expected ‘;’ before ‘int’
   48 | AAAAAAA
      |        ^
      |        ;
......
   54 | int sumaLista(List *L) {
      | ~~~     
Compilation failed
653b776
Thu 21 Mar 2024 03:30:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0738508
Thu 21 Mar 2024 03:30:46 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b4820b4
Thu 21 Mar 2024 01:25:34 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |       push_back(L, (void*)malloc(sizeof(int)));
      |       ^~~~~~~~~
      |       pushBack
exercises.c:49:14: error: implicit declaration of function ‘last’ [-Werror=implicit-function-declaration]
   49 |       *(int*)last(L) = i;
      |              ^~~~
exercises.c:49:8: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   49 |       *(int*)last(L) = i;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
bcccbf7
Thu 21 Mar 2024 01:28:14 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
27db4e8
